# silnik2D

./: CMakeLists.txt  Engine.cpp  Engine.h  main.cpp
SFML/doc/html/: Vertex_8hpp_source.html  classsf_1_1Vertex.html
SFML/include/SFML/Graphics/: Transformable.hpp
clases/: Coordinates.cpp  Figure.cpp  Keyboard.cpp  Mouse.cpp  Point.cpp  PrimitiveRenderer.cpp
cmake_modules/: FindSFML.cmake
definitions/: AnimatedCharacter.cpp  Bitmap.cpp  CharacterController.cpp  Circle.cpp  Figure.cpp  Game.cpp  Keyboard.cpp  Mouse.cpp  Point.cpp  PrimitiveRenderer.cpp  Square.cpp  Triangle.cpp
headers/: AnimatedCharacter.h  Bitmap.h  CharacterController.h  Circle.h  Figure.h  Game.h  Keyboard.h  Mouse.h  Point.h  PongGame.h  PrimitiveRenderer.h  Square.h  Triangle.h
